Grace/tests/gibbs/errors/t052.grace
// ERROR = P1001
import "StandardPrelude"
